testsuite/gsksl/errors/local-redeclaration-of-function-parameter.glsl

void
foo (int x)
{
  int x;
}

void main()
{
  foo (1);
}
